#25 【CI/CD】Xcode Cloud の設定

--- a/Development/Development/InfoPlist.xcstrings
+++ b/Development/Development/InfoPlist.xcstrings
@@ -7,7 +7,7 @@
       "localizations" : {
         "en" : {
           "stringUnit" : {
-            "state" : "needs_review",
+            "state" : "translated",
             "value" : "DI Sample(Dev)"
           }
         },
