#25 【CI/CD】Xcode Cloud の設定

--- a/Development/Development/InfoPlist.xcstrings
+++ b/Development/Development/InfoPlist.xcstrings
@@ -8,13 +8,13 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "DI Sample(Dev)"
+            "value" : "DI Sample-D"
           }
         },
         "ja" : {
           "stringUnit" : {
             "state" : "new",
-            "value" : "DIサンプル(開発)"
+            "value" : "DIサンプル-D"
           }
         }
       }
