--- a/PreviewCatalog/PreviewCatalog/InfoPlist.xcstrings
+++ b/PreviewCatalog/PreviewCatalog/InfoPlist.xcstrings
@@ -8,13 +8,13 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Preview"
+            "value" : "DI Sample-P"
           }
         },
         "ja" : {
           "stringUnit" : {
             "state" : "new",
-            "value" : "プレビュー"
+            "value" : "DIサンプル-P"
           }
         }
       }
