【Snapshot Testing】wait 処理をいれないと Combine のストリームを受けた反映がされないがテスト実行が遅くなってしまう #97

--- a/DISampleAppPackage/Sources/Presentation/Resources/Localizable.xcstrings
+++ b/DISampleAppPackage/Sources/Presentation/Resources/Localizable.xcstrings
@@ -171,6 +171,16 @@
         }
       }
     },
+    "ライセンスはありません" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "There are no licenses"
+          }
+        }
+      }
+    },
     "予期せぬエラー" : {
       "localizations" : {
         "en" : {
