--- a/DISampleAppPackage/Sources/Presentation/Resources/Localizable.xcstrings
+++ b/DISampleAppPackage/Sources/Presentation/Resources/Localizable.xcstrings
@@ -51,6 +51,16 @@
         }
       }
     },
+    "アイコン一覧" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Icon List"
+          }
+        }
+      }
+    },
     "オフ" : {
       "localizations" : {
         "en" : {
@@ -181,6 +191,16 @@
         }
       }
     },
+    "ライセンス詳細" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "License Detail"
+          }
+        }
+      }
+    },
     "予期せぬエラー" : {
       "localizations" : {
         "en" : {
@@ -217,6 +237,16 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Next"
+          }
+        }
+      }
+    },
+    "画面一覧" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "View List"
           }
         }
       }
